[gd_scene load_steps=20 format=2]

[ext_resource path="res://Combat/HUD/CommandWindow/CommandWindow.gd" type="Script" id=1]
[ext_resource path="res://Combat/HUD/CommandWindow/Background.png" type="Texture" id=2]
[ext_resource path="res://Combat/HUD/CommandWindow/ShiftLeft.png" type="Texture" id=3]
[ext_resource path="res://Combat/HUD/CommandWindow/ShiftLeftHover.png" type="Texture" id=4]
[ext_resource path="res://Combat/HUD/CommandWindow/ShiftDisabled.png" type="Texture" id=5]
[ext_resource path="res://Combat/HUD/CommandWindow/Shift.gd" type="Script" id=6]
[ext_resource path="res://Combat/HUD/CommandWindow/ShiftRight.png" type="Texture" id=7]
[ext_resource path="res://Combat/HUD/CommandWindow/ShiftRightHover.png" type="Texture" id=8]
[ext_resource path="res://Combat/HUD/CommandWindow/Advance.png" type="Texture" id=9]
[ext_resource path="res://Combat/HUD/CommandWindow/AdvancePressed.png" type="Texture" id=10]
[ext_resource path="res://Combat/HUD/CommandWindow/AdvanceHover.png" type="Texture" id=11]
[ext_resource path="res://Combat/HUD/CommandWindow/Advance.gd" type="Script" id=12]
[ext_resource path="res://Combat/HUD/CommandWindow/Action.png" type="Texture" id=13]
[ext_resource path="res://Combat/HUD/CommandWindow/Used.png" type="Texture" id=14]
[ext_resource path="res://Combat/HUD/CommandWindow/Action.gd" type="Script" id=15]
[ext_resource path="res://Combat/HUD/CommandWindow/Item.png" type="Texture" id=16]
[ext_resource path="res://Combat/HUD/CommandWindow/Item.gd" type="Script" id=17]
[ext_resource path="res://Combat/HUD/CommandWindow/Stance.png" type="Texture" id=18]
[ext_resource path="res://Combat/HUD/CommandWindow/Stance.gd" type="Script" id=19]

[node name="CommandWindow" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 373.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse" ]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="ShiftLeft" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 15.0
margin_right = 60.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )
script = ExtResource( 6 )
_sections_unfolded = [ "Mouse", "Textures", "Visibility" ]

[node name="ShiftRight" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 67.0
margin_top = 15.0
margin_right = 117.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 5 )
script = ExtResource( 6 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="Advance" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_top = 8.0
margin_right = 362.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
script = ExtResource( 12 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="Action" type="TextureButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 60.0
margin_right = 55.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_disabled = ExtResource( 14 )
script = ExtResource( 15 )
_sections_unfolded = [ "Mouse", "Textures", "Visibility" ]

[node name="List" type="HBoxContainer" parent="Action" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 70.0
margin_right = 47.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Mouse" ]

[node name="Item" type="TextureButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 61.0
margin_right = 114.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
texture_disabled = ExtResource( 14 )
script = ExtResource( 17 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="List" type="HBoxContainer" parent="Item" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -52.0
margin_top = 69.0
margin_right = -12.0
margin_bottom = 109.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Mouse" ]

[node name="Stance" type="TextureButton" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 123.0
margin_top = 62.0
margin_right = 173.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 18 )
texture_disabled = ExtResource( 14 )
script = ExtResource( 19 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="List" type="HBoxContainer" parent="Stance" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -111.0
margin_top = 68.0
margin_right = -71.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Mouse" ]

[node name="Anchor" type="VBoxContainer" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 374.0
margin_top = 1.0
margin_right = 414.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[connection signal="pressed" from="ShiftLeft" to="ShiftLeft" method="_on_ShiftLeft_pressed"]

[connection signal="pressed" from="ShiftRight" to="ShiftRight" method="_on_ShiftRight_pressed"]

[connection signal="pressed" from="Advance" to="Advance" method="_on_Advance_pressed"]

[connection signal="mouse_entered" from="Action" to="Action" method="_on_Action_mouse_entered"]

[connection signal="mouse_exited" from="Action" to="Action" method="_on_Action_mouse_exited"]

[connection signal="toggled" from="Action" to="Action" method="_on_Action_toggled"]

[connection signal="mouse_entered" from="Item" to="Item" method="_on_Item_mouse_entered"]

[connection signal="mouse_exited" from="Item" to="Item" method="_on_Item_mouse_exited"]

[connection signal="toggled" from="Item" to="Item" method="_on_Item_toggled"]

[connection signal="mouse_entered" from="Stance" to="Stance" method="_on_Stance_mouse_entered"]

[connection signal="mouse_exited" from="Stance" to="Stance" method="_on_Stance_mouse_exited"]

[connection signal="toggled" from="Stance" to="Stance" method="_on_Stance_toggled"]


